chore: move stuff to list var descriptor